infrastructure/cilium/kubernetes-api-loadbalancer.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-lb
  namespace: default
  labels:
    component: apiserver
    provider: kubernetes
  annotations:
    io.cilium/lb-ipam-ips: "192.168.1.235"
spec:
  type: LoadBalancer
  ports:
    - name: https
      port: 6443
      protocol: TCP
      targetPort: 6443
  sessionAffinity: None
---
apiVersion: v1
kind: Endpoints
metadata:
  name: kubernetes-lb
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.221
      - ip: 192.168.1.222
      - ip: 192.168.1.223
    ports:
      - name: https
        port: 6443
        protocol: TCP
