infrastructure/cilium/hubble-ui-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/target: traefik.i.recompiled.org
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hubble.i.recompiled.org`)
      kind: Rule
      services:
        - name: hubble-ui
          port: 80
      middlewares:
        - name: oauth2-proxy
          namespace: auth
  tls:
    secretName: hubble-ui-tls
